# PIDSNeRF

./: README.md  help_functions.py  losses.py  opt.py  show_gui.py  train.py  utils.py
colmap_data/horns/sparse/0/: project.ini
datasets/: base.py  colmap.py  colmap_utils.py  ray_utils.py
models/: custom_functions.py  networks.py  rendering.py
models/csrc/: CMakeCache.txt  CMakeLists.txt  binding.cpp  cmake_install.cmake  losses.cu  main.dadaw  raymarching.cu  setup.py  test.jbnkj  volumerendering.cu
models/csrc/include/: utils.h
